--- a/app/views/products/kt.html.erb
+++ b/app/views/products/kt.html.erb
@@ -44,7 +44,7 @@
  <% end %>
 </div>
 <!-- 下半页over	 -->
-   <div class="text-center">
-     <%= will_paginate(@products, renderer: BootstrapPagination::Rails) %>
-   </div>
+<div class="text-center">
+ <%= will_paginate(@products,:class => 'sy-pagination',:previous_label => '<',:next_label => '>',renderer: BootstrapPagination::Rails) %>
+</div>
 </div>
