--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -138,14 +138,19 @@ border-color: #dc4022;
 
 <div class="product c-color-2">
 	<div class="product-image">
-		<%= link_to product_path(product) do %>
+	    <% if product.photos.present? %>
+
+		               <%= link_to product_path(product) do %>
     				   		<%= image_tag(product.photos[0].image.thumb.url) %>     
+                             <% end %>
+                     <% else %>
+                         <%= image_tag("http://placehold.it/400x400&text=No Pic") %>
                              <% end %>
     				   		
 	</div>
 	<div class="product-description"><%= product.description %></div>
 	<div class="product-price">
-		<%= product.price %>
+	 <span style="color: red">	<%= product.price %> </span>
 	</div>
 	<div class="product-controller">
 	         <div>
@@ -162,7 +167,10 @@ border-color: #dc4022;
 	
 </div>
  <br/>
-        <div class="total clearfix">
+        
+		<% end %>
+		<% end %>
+		<div class="total clearfix">
 			<span class="pull-right">
 				<span style="font-size: 16px;"> 
                 
@@ -174,8 +182,6 @@ border-color: #dc4022;
 				</span>
 			</span>
 		</div>
-		<% end %>
-		<% end %>
 </div>
 </div>
 
