--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,15 +1,25 @@
-<h2>Forgot your password?</h2>
+<style type="text/css">
+	  .btn:hover {
+      background-color:#393939 !important;
+     }  
+</style>
 
+<div class="container">
+<br>
+<h3>一分钟找回您的密码</h3>
+<br>
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :email, required: true, autofocus: true ,label:"邮箱", placeholder:"请输入您的注册邮箱",:style => "border: none;width:30%;" %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "找回密码",:style => "border: none;color:white;width:30%;background-color:#584b4f;" %>
+     <br>
+    <p style="font-size: 14px;">稍后我们将会发送一封邮件到您邮箱，敬请查收！</p>
   </div>
 <% end %>
 
-<%= render "users/shared/links" %>
+</div>
