--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -55,173 +55,213 @@
 
 </section>
 
+<!-- part1 -->
+  <style>
+  .welcome-container {
+      padding: 80px 120px;
+  }
+  </style>
+<body>
+
+<div class="welcome-container text-center">
+  <h3>新品上市</h3>
+  <p><em>优惠多多</em></p>
+  <p>我们永远站在时尚前沿，只为向你提供更好的生活</p>
+  <hr>
+  <div class="row">
+    <div class="col-sm-4">
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/9">
+		    <img src="https://ooo.0o0.ooo/2017/02/19/58a950d26e80c.jpg" alt="Random Name" width="255" height="255" >
+		  </a>
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/9">
+      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
+    </div>
+    <div class="col-sm-4">
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/12">
+		    <img src="https://ooo.0o0.ooo/2017/02/19/58a9623dd8e51.jpg" alt="Random Name" width="255" height="255" >
+		  </a>
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/12">
+      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
+    </div>
+    <div class="col-sm-4">
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/13">
+		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/71/medium_1.jpg" alt="Random Name" width="255" height="255" >
+		  </a>
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/13">
+      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/8">
+		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/46/medium_11.jpg" alt="Random Name" width="255" height="255" >
+		  </a>
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/8">
+      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
+    </div>
+    <div class="col-sm-4">
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/10">
+		    <img src="https://ooo.0o0.ooo/2017/02/19/58a950d3b39d5.jpg" alt="Random Name" width="255" height="255" >
+		  </a>
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/10">
+      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
+    </div>
+    <div class="col-sm-4">
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/11">
+		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/61/medium_1.jpg" alt="Random Name" width="255" height="255" >
+		  </a>
+      <a href="https://infinite-atoll-59672.herokuapp.com/products/11">
+      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
+    </div>
+  </div>
+</div>
+
+</body>
+<!-- part1 over -->
+
+<!-- part2 -->
+<div class="bg-1">
+  <div class="welcome-container">
+    <h3 class="text-center">店主推荐</h3>
+    <p class="text-center">诚意满满<br> 品味由心而生，你值得更好的生活 </p>
+    <hr>
+    <div class="row">
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <a href="https://infinite-atoll-59672.herokuapp.com/products/4">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/41/medium_shafa1.jpg" data-holder-rendered="true"></a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!-- part2-1-->
+  <div class="container">
+          <div class="row">
+              <div class="span12">
+                  <div class="well">
+                      <div id="myCarousel" class="carousel fdi-Carousel slide">
+                       <!-- Carousel items -->
+                          <div class="carousel fdi-Carousel slide" id="eventCarousel" data-interval="0">
+                              <div class="carousel-inner onebyone-carosel">
+                                  <div class="item active">
+                                      <div class="col-md-4">
+                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/7">
+                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/31/medium_%E5%BA%8A1.jpg" class="img-responsive center-block"></a>
+                                          <div class="text-center">双人舒适大床 ￥2800</div>
+                                      </div>
+                                  </div>
+                                  <div class="item">
+                                      <div class="col-md-4">
+                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/6">
+                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/26/medium_%E6%A9%B1%E6%9F%9C1.jpg" class="img-responsive center-block"></a>
+                                          <div class="text-center">古典风格耐用橱柜 ￥1500</div>
+                                      </div>
+                                  </div>
+                                  <div class="item">
+                                      <div class="col-md-4">
+                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/5">
+                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/21/medium_%E9%A4%90%E6%A1%8C1.jpg" class="img-responsive center-block"></a>
+                                          <div class="text-center">居家简单实用餐桌 ￥3200</div>
+                                      </div>
+                                  </div>
+                                  <div class="item">
+                                      <div class="col-md-4">
+                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/3">
+                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/6/medium_%E5%8A%9E%E5%85%AC%E6%A1%8C1.jpg" class="img-responsive center-block"></a>
+                                          <div class="text-center">简洁美观电脑桌 ￥1300 </div>
+                                      </div>
+                                  </div>
+                                  <div class="item">
+                                      <div class="col-md-4">
+                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/4">
+                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/41/medium_shafa1.jpg" class="img-responsive center-block"></a>
+                                          <div class="text-center">三座沙龙式精致沙发 ￥2400</div>
+                                      </div>
+                                  </div>
+                                  <div class="item">
+                                      <div class="col-md-4">
+                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/1">
+                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/11/medium_%E6%A4%85%E5%AD%901.jpg" class="img-responsive center-block"></a>
+                                          <div class="text-center">360度旋转椅 ￥888</div>
+                                      </div>
+                                  </div>
+                              </div>
+                              <a class="left carousel-control" href="#eventCarousel" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                              </a>
+                              <a class="right carousel-control" href="#eventCarousel" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                              </a>
+                          </div>
+                          <!--/carousel-inner-->
+                      </div><!--/myCarousel-->
+                  </div><!--/well-->
+              </div>
+          </div>
+      </div>
+<script>
+      $(document).ready(function () {
+    $('#myCarousel').carousel({
+        interval: 10000
+    })
+    $('.fdi-Carousel .item').each(function () {
+        var next = $(this).next();
+        if (!next.length) {
+            next = $(this).siblings(':first');
+        }
+        next.children(':first-child').clone().appendTo($(this));
+
+        if (next.next().length > 0) {
+            next.next().children(':first-child').clone().appendTo($(this));
+        }
+        else {
+            $(this).siblings(':first').children(':first-child').clone().appendTo($(this));
+        }
+    });
+});
+</script>
+  <!-- part2-1 over -->
+</div>
+<!-- part2 over -->
+
+<!-- part3 -->
 <div class="container">
-<div class="shading">
-<h2> 热烈推荐 </h2>
-<div class="product-all">
-<a href="https://infinite-atoll-59672.herokuapp.com/products">更多商品 <</a>
-</div>
-<hr>
-<div class="row">
-<div class="product">
-	<div class="col-sm-4">
-		      <a href="https://infinite-atoll-59672.herokuapp.com/products/9">
-		        <img src="https://ooo.0o0.ooo/2017/02/19/58a950d26e80c.jpg" style="width:100%" >
-		        </a>
-               <p>￥ 1899</p>
-              <a href="https://infinite-atoll-59672.herokuapp.com/products/9">时尚风格单人床</a>
-              </div>
-
-	<div class="col-sm-4">
-	           <a href="https://infinite-atoll-59672.herokuapp.com/products/8">
-		        <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/46/medium_11.jpg" style="width:100%" >
-		        </a>
-              <p>￥ 288</p>
-             <a href="https://infinite-atoll-59672.herokuapp.com/products/8">多功能个人电脑椅</a>
-	</div>
-
-	<div class="col-sm-4">
-		<a href="https://infinite-atoll-59672.herokuapp.com/products/10">
-		        <img src="https://ooo.0o0.ooo/2017/02/19/58a950d3b39d5.jpg" style="width:100%" >
-		        </a>
-               <p>￥ 5488</p>
-               <a href="https://infinite-atoll-59672.herokuapp.com/products/10">超柔软垫袋弹簧沙发</a>
-	          </div>
-       </div>
-              </div>
-</div>
-
-<br><br>
-<h2> 特色商品 </h2>   
-<div class="product-all">
-<a href="https://infinite-atoll-59672.herokuapp.com/products">更多商品 <</a>
-</div>
-<hr>
-<div class="row">
-<div class="product">
-	<div class="col-sm-4">
-		      <a href="https://infinite-atoll-59672.herokuapp.com/products/11">
-		        <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/61/medium_1.jpg" style="width:100%" >
-		        </a>
-               <p>￥ 1199</p>
-              <a href="https://infinite-atoll-59672.herokuapp.com/products/11">现代酷派的设计和玻璃顶板餐饮一套</a>
-              </div>
-
-	<div class="col-sm-4">
-	           <a href="https://infinite-atoll-59672.herokuapp.com/products/12">
-		        <img src="https://ooo.0o0.ooo/2017/02/19/58a9623dd8e51.jpg" style="width:100%" >
-		        </a>
-              <p>￥ 1800</p>
-             <a href="https://infinite-atoll-59672.herokuapp.com/products/12">有脚床垫床Bonnerukoiru规范的两倍大小</a>
-	</div>
-
-	<div class="col-sm-4">
-		<a href="https://infinite-atoll-59672.herokuapp.com/products/13">
-		        <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/71/medium_1.jpg" style="width:100%" >
-		        </a>
-               <p>￥ 1888</p>
-               <a href="https://infinite-atoll-59672.herokuapp.com/products/13">超级柔和2座创意沙发</a>
-	          </div>
-</div>
-</div>
-
-
-<!-- I Know You -->
-
-	
-
-
-
-
-
-
-
-
 	<div class="row">
 	      <br>
 	      <div class="know-you">
-		懂你的<span class="heart">❤️</span>!
+		    关于ILIFE
         ️</div>
 	</div>
     <hr>
-            <div class="row row-margin-bottom">
-            <div class="col-md-5 no-padding lib-item" data-category="view">
-                <div class="lib-panel">
-                    <div class="row box-shadow">
-                        <div class="col-md-6">
-                            <img class="lib-img-show" src="https://ooo.0o0.ooo/2017/02/20/58aa6eda2fc63.jpg">
-                        </div>
-                        <div class="col-md-6">
-                            <div class="lib-row lib-header">
-                                健康
-                                <div class="lib-header-seperator"></div>
-                            </div>
-                            <div class="lib-row lib-desc">
-                               每一种材料都精挑细选，因为我们比您更在乎您和您家人的健康。
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-5 no-padding lib-item" data-category="ui">
-                <div class="lib-panel">
-                    <div class="row box-shadow">
-                        <div class="col-md-6">
-                            <img class="lib-img" src="https://ooo.0o0.ooo/2017/02/20/58aa6eda6703d.jpg">
-                        </div>
-                        <div class="col-md-6">
-                            <div class="lib-row lib-header">
-                                简单
-                                <div class="lib-header-seperator"></div>
-                            </div>
-                            <div class="lib-row lib-desc">
-                                整体布局方案，将帮您节约宝贵的时间，品味、时间一个都不落下。
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <!-- </div>
-         <div class="row row-margin-bottom"> -->
-            <div class="col-sm-5 no-padding lib-item" data-category="view">
-                <div class="lib-panel">
-                    <div class="row box-shadow">
-                        <div class="col-md-6">
-                            <img class="lib-img-show" src="https://ooo.0o0.ooo/2017/02/20/58aa6eda554da.jpg">
-                        </div>
-                        <div class="col-md-6">
-                            <div class="lib-row lib-header">
-                                升级
-                                <div class="lib-header-seperator"></div>
-                            </div>
-                            <div class="lib-row lib-desc">
-                                未曾停下脚步，向您交付最好的产品和设计是我们永远的追求。
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-sm-5 no-padding lib-item" data-category="ui">
-                <div class="lib-panel">
-                    <div class="row box-shadow">
-                        <div class="col-md-6">
-                            <img class="lib-img" src="https://ooo.0o0.ooo/2017/02/20/58aa6eda60010.jpg">
-                        </div>
-                        <div class="col-md-6">
-                            <div class="lib-row lib-header">
-                               服务
-                                <div class="lib-header-seperator"></div>
-                            </div>
-                            <div class="lib-row lib-desc">
-                                天涯海角，您在哪里我们的服务就将陪伴你到哪里。
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-fluid text-center">
+      <br>
+      <div class="row">
+        <div class="col-sm-3">
+          <span class="glyphicon glyphicon-grain logo-small"></span>
+          <h4>健康</h4>
+          <p>每一种材料都精挑细选<br>因为我们比您更在乎您和您家人的健康</p>
         </div>
+        <div class="col-sm-3">
+          <span class="glyphicon glyphicon-refresh logo-small"></span>
+          <h4>简单</h4>
+          <p>整体布局方案<br>帮您节约宝贵的时间，品味和时间一个都不落下</p>
+        </div>
+        <div class="col-sm-3">
+          <span class="glyphicon glyphicon-upload logo-small"></span>
+          <h4>升级</h4>
+          <p>未曾停下脚步<br>向您交付最好的产品和设计是我们永远的追求</p>
+        </div>
+        <div class="col-sm-3">
+          <span class="glyphicon glyphicon-globe logo-small"></span>
+          <h4>服务</h4>
+          <p>天涯海角<br>您在哪里我们的服务就将陪伴你到哪里</p>
+        </div>
+      </div>
+    </div>
 </div>
-
-
+<!-- part3 over -->
