--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 
   <div class="carousel-inner">
     <div class="item active">
-      <a href="#"><img src="https://ww4.sinaimg.cn/large/006tNbRwgy1fcvv8b34uij31hc0m8wok.jpg" /></a>
+      <a href="#"><img src="https://ww2.sinaimg.cn/large/006tNbRwgy1fda392cqvtj31hc0m8qv5.jpg" /></a>
       	<div class="hero">
         <hgroup>
             <h1>爱工作</h1>
@@ -45,10 +45,10 @@
     </div>
   </div>
 
-  <a class="left carousel-control" href="#carousel-example" data-slide="prev">
+  <a class="left carousel-control" href="#carousel-example" data-slide="prev" style="color:#ed4c1c;">
     <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
-  <a class="right carousel-control" href="#carousel-example" data-slide="next">
+  <a class="right carousel-control" href="#carousel-example" data-slide="next" style="color:#ed4c1c;">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div>
@@ -57,33 +57,36 @@
 
 <!-- part1 -->
   <style>
-  .welcome-container {
-      padding: 80px 120px;
+  .welcome-container1 {
+      padding: 50px 120px;
+  }
+  .welcome-container2 {
+      padding: 0px 120px;
   }
   </style>
 <body>
 
-<div class="welcome-container text-center">
-  <h3>新品上市</h3>
-  <p><em>优惠多多</em></p>
+<div class="welcome-container1 text-center">
+  <h1 style="font-size: 50px; color:#ed4c1c">新品上市</h1>
+  <p>优惠多多</p>
   <p>我们永远站在时尚前沿，只为向你提供更好的生活</p>
-  <hr>
+  <hr style="height:3px;border:none;border-top:3px;background-color:#ed4c1c" />
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4 sy">
       <a href="https://infinite-atoll-59672.herokuapp.com/products/9">
 		    <img src="https://ooo.0o0.ooo/2017/02/19/58a950d26e80c.jpg" alt="Random Name" width="255" height="255" >
 		  </a>
       <a href="https://infinite-atoll-59672.herokuapp.com/products/9">
       <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 sy">
       <a href="https://infinite-atoll-59672.herokuapp.com/products/12">
 		    <img src="https://ooo.0o0.ooo/2017/02/19/58a9623dd8e51.jpg" alt="Random Name" width="255" height="255" >
 		  </a>
       <a href="https://infinite-atoll-59672.herokuapp.com/products/12">
       <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 sy">
       <a href="https://infinite-atoll-59672.herokuapp.com/products/13">
 		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/71/medium_1.jpg" alt="Random Name" width="255" height="255" >
 		  </a>
@@ -92,21 +95,21 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4 sy">
       <a href="https://infinite-atoll-59672.herokuapp.com/products/8">
 		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/46/medium_11.jpg" alt="Random Name" width="255" height="255" >
 		  </a>
       <a href="https://infinite-atoll-59672.herokuapp.com/products/8">
       <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 sy">
       <a href="https://infinite-atoll-59672.herokuapp.com/products/10">
 		    <img src="https://ooo.0o0.ooo/2017/02/19/58a950d3b39d5.jpg" alt="Random Name" width="255" height="255" >
 		  </a>
       <a href="https://infinite-atoll-59672.herokuapp.com/products/10">
       <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 sy">
       <a href="https://infinite-atoll-59672.herokuapp.com/products/11">
 		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/61/medium_1.jpg" alt="Random Name" width="255" height="255" >
 		  </a>
@@ -121,15 +124,22 @@
 
 <!-- part2 -->
 <div class="bg-1">
-  <div class="welcome-container">
-    <h3 class="text-center">店主推荐</h3>
-    <p class="text-center">诚意满满<br> 品味由心而生，你值得更好的生活 </p>
-    <hr>
+  <div class="welcome-container2">
+    <h1 class="text-center">店主推荐</h1>
+    <p class="text-center" style="color:#333333">诚意满满<br> 品味由心而生，你值得更好的生活 </p>
+    <hr style="height:3px;border:none;border-top:3px;background-color:#ed4c1c" />
     <div class="row">
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading"><strong>三座沙龙式精致沙发</strong></h2>
+          <h2 style="color:#ed4c1c">￥2400</h2>
+          <p class="lead sy" style="color:#333333">现代时尚,彰显个性；工艺考究，注重细节。<br>
+            您喜欢与家人、朋友一起，在美好的周末时光，窝在家中一角，<br>
+            谈天说地，畅想开怀，<br>
+            专心致志谈论过去、现在、将来吗？<br>
+            那么如何建立这样一个如此重要的畅谈区?<br>
+            这款沙发，为家开辟专属聊天角，带给您层次化的居家沙龙。
+          </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <a href="https://infinite-atoll-59672.herokuapp.com/products/4">
@@ -140,6 +150,7 @@
 
   </div>
   <!-- part2-1-->
+  <br>
   <div class="container">
           <div class="row">
               <div class="span12">
