--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,7 +13,7 @@
     color: #fff;
     text-align: center;
     text-transform: uppercase;
-    text-shadow: 1px 1px 0 rgba(0,0,0,.75);
+    text-shadow: 1px 1px 0 rgba(237,76,28,.75);
       -webkit-transform: translate3d(-50%,-50%,0);
          -moz-transform: translate3d(-50%,-50%,0);
           -ms-transform: translate3d(-50%,-50%,0);
@@ -26,7 +26,14 @@
     margin: 0;
     padding: 0;
 }
-
+.hero p {
+    color: #ed4c1c;
+    text-shadow: 0px 0px;
+}
+.hero h3 {
+    color: #ed4c1c;
+    text-shadow: 0px 0px;
+}
 .fade-carousel .carousel-inner .item .hero {
     opacity: 0;
     -webkit-transition: 2s all ease-in-out .1s;
