--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -1,3 +1,50 @@
 // Place all the styles related to the carts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.countNumber {
+  padding: 0 24px;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  .countNumber-btn-disabled {
+  	color: #dfdfdf;
+  }
+  .countNumber-btn {
+  	font-size: 22px;
+    width: 30px;
+    height: 30px;
+    line-height: 28px;
+    text-decoration: none;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    overflow: hidden;
+    background: #fff;
+    color: #999;
+    border: 1px solid #e0e0e0;
+  }
+  .countNumber-input {
+   	font-size: 16px;
+    text-align: center;
+    width: 74px;
+    border: 1px solid #e0e0e0;
+    height: 26px;
+    padding: 14px 4px;
+    outline: none;
+   }
+   .countNumber-btn-plus {
+   	  right: 0;
+    	top: 0;
+   }
+   .countNumber-btn-sub {
+  	right: auto;
+    left: 0;
+    top: 0;
+  }
+}
+
+.item-quantity {
+		padding-top: 22px;
+		width: 280px;
+	}
