--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -16,37 +16,38 @@
 
 }
 
-.collections {
+.carts {
 	height: 50px;
 	text-align: center;
 	border: 1px solid #e8e8e8;
 	font-weight: 200px;
-	font-size: 16px;
-	
+	font-size: 16px;	
 }
 
 .label-image {
-	width: 48%;
+	width: 32%;
 	line-height: 45px;
 	display: inline-block;
 
 }
 
-.label-price,.label-controller {
-	width: 24%;
+.label-price,.label-controller,.label-quantity,.label-subtotal {
+	width: 16%;
 	line-height: 50px;
 	display: inline-block;
 }
-	
+
+
 .product {
 	height: 220px;
 	text-align: center;
 	margin-top: 10px;
 	border: 1px solid #e8e8e8;
+	margin-top: 20px;
 }
 
 .product-image {
-	width: 24%;
+	width: 16%;
 	display: inline-block;
 }
 
@@ -60,40 +61,50 @@
 }
 
 .product-description {
-	width: 24%;
+	width: 16%;
 	display: inline-block;
 }
 
 .product-price {
-	width: 24%;
+	width: 16%;
 	display: inline-block;
 	line-height: 210px;
 }
 
-.product-controller {
-	width: 24%;
+.product-quantity {
+	width: 16%;
 	display: inline-block;
 }
 
-.empty-collection {
+.product-subtotal {
+    width: 16%;
+	display: inline-block;
+
+}
+.product-controller {
+	width: 16%;
+	display: inline-block;
+}
+
+.empty-carts {
 		 margin-top: 20px;
 		 margin-bottom: 300px;
 
 }
 
-.empty-collection-img{
+.empty-carts-img{
 	 
 	 display: inline-block;;
 }
 
-.empty-collection-img img {
+.empty-carts-img img {
 	 width: 250px; 
 	 height: 250px;
 	 border-radius: 50px;
 	 /*display: inline-block;;*/
 }
 
-.empty-collection-text {
+.empty-carts-text {
     font-size: 25px;
     color: #2a424b;
 	display: inline-block;
@@ -107,84 +118,89 @@ border-color: #483C32;
 
 .btn-danger {
 color: #fff;
-background-color: #FF0000;
+background-color: #ea4a1c;
 border-color: #dc4022;
 }
 
+.checkout-carts .btn:hover
+{
+background-color:red !important;
+}  
 </style>
-   
 
 <div class="container">
-<div class="row">
-	<div class="col-md-12">
-   <br>
-	<%= link_to("清空购物车", clean_carts_path, method: :delete, class: "pull-right", style: "text-decoration: underline;", data: { confirm: "你确定要清空整个购物车吗？"}) %>
-		
-		<h2> 购物车 </h2>
-       
-        </div>
-		<table class="table table-bordered">
-			<thead>
-				<tr>
-					<th colspan="2"> 商品资讯 </th>
-					<th>单价</th>
-					<th>数量</th>
-					<th>操作</th>
-				</tr>
-			</thead>
-			<tbody>
-				
-				<% current_cart.cart_items.each do |cart_item| %>
-				<tr>
-					<td>
-						<%= link_to product_path(cart_item.product) do %>
-						<% if cart_item.product.photos.present? %>
-						 <%= image_tag(cart_item.product.photos[0].image.thumb.url, class: "thumbnail") %>
 
-						<% else %>
-						<%= image_tag("http://placehold.it//200x200&text=No Pic", class: "thumbnail") %>
+ <h3 ><a href="products" style="color: #483C32;">ILIFI商城</a></h3>
+ <% if current_cart.cart_items.present? %>
+ 	
+	<div class="carts c-color-4">
+	       <div class="label-image"> 商品信息</div>
+	       <div class="label-price">单价</div>
+	       <div class="label-quantity">数量</div>
+	       <div class="label-subtotal">小计(元）</div>
+	       <div class="label-controller">操作</div>
+   </div>
+          	  <% current_cart.cart_items.each do |cart_item| %>
 
-						<% end %>
-						<% end %>
-					</td>
-                  <td>
-                  	<%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
-                  </td>
-                  <td>
-                  	<%= cart_item.product.price %>
-                  </td>
-                  <td>
-                 <% cart_item = current_cart.cart_items.find_by(product_id: cart_item.product_id) %>
-                 <%= form_for cart_item, url: cart_item_path(cart_item.product_id) do |f| %>
-                 <%= f.select :quantity, 1..cart_item.product.quantity %>
-                 <%= f.submit "更新", data: { disable_with: "Sumbmiting..." } %>
-                 <% end %>
-                  </td>
-                  <td>
-             <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
-               <i class="fa fa-trash"></i>
+   <div class="product c-color-2">
+	    <div class="product-image">
+	         <% if cart_item.product.photos.present? %>
+
+		              <%= link_to product_path(cart_item.product_id) do %>
+    			      <%= image_tag(cart_item.product.photos[0].image.thumb.url) %>     
+                      <% end %>
+             <% else %>
+                      <%= image_tag("http://placehold.it/400x400&text=No Pic") %>
              <% end %>
-           </td>
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
+       </div>
 
-		<br>
+	    <div class="product-description"><%= link_to(cart_item.product.description, product_path(cart_item.product_id) )%></div>
+	    <div class="product-price">
+	       	<%= cart_item.product.price %> </div>
+	    
+	    <div class="product-quantity countNumber">
+             <%= link_to("-", remove_quantity_cart_item_path(cart_item.product), class: "countNumber-btn countNumber-btn-sub", method: :post) %>
+             <input class="countNumber-input" type="text" value="<%= cart_item.quantity %>">
+             <%= link_to("+", add_quantity_cart_item_path(cart_item.product_id), class: "countNumber-btn countNumber-btn-plus", method: :post) %>
+	                   </div>  
+	    <div class="product-subtotal">
+	    	 <span style="color: red"><%= cart_item.product.price * cart_item.quantity %></span>
+	    </div>
 
-		<div class="total clearfix">
-			<span class="pull-right">
-				<span> 
+	    <div class="product-controller">
+     	      <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
+              <i class="btn btn-primary fa fa-trash fa-1.5x" ></i>
+              <% end %>
+        </div>
+           <% end %>
+   </div>
+	    <div class="total clearfix">
+			   <span class="pull-right" style="margin-top: 20px; font-size: 16px;">
 				
-				总计  <%= render_cart_total_price(current_cart) %> RMB
+				总计: <span style="color: red;">  <%= render_cart_total_price(current_cart) %> </span>RMB
 				</span>
-			</span>
 		</div>
 
-		<hr>
-
-		<div class="checkout clearfix">
-			<%= link_to("确认结账", checkout_carts_path, method: :post, class: "btn btn-lg btn-danger pull-right") %>
+		<div class="checkout-carts">
+           <%= link_to "确认结账", checkout_carts_path,  {:style=>'color:#FFFFFF;margin-top:20px;', :class => "btn btn-danger btn-lg pull-right",:method => :post,} %>
 		</div>
-	</div>
+        
+	       
+
+	       <% else %>
+	      
+	        <div class="empty-carts">
+                <div class="empty-carts-img">
+                   <img src="https://ooo.0o0.ooo/2017/03/04/58ba58b24f5f1.jpg" / >
+               </div>
+               <div class="empty-carts-text">
+               亲，你的购物车还是空的，<a href="products">去逛逛吧～</a>
+               </div>
+            </div>
+
+	       <% end %>
+
+	    
+
+   
 </div>
