--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
 	<div class="col-md-12">
 		
@@ -38,7 +39,7 @@
 
 		<hr>
 
-		<h2> 订单咨询 </h2>
+		<h2> 订单信息 </h2>
 
 		<div class="order-form">
 			
@@ -46,18 +47,18 @@
 
 			<legend> 订购人 </legend>
 			<div class="form-group col-lg-6">
-				<%= f.input :billing_name %>
+				<%= f.input :billing_name ,label:"姓名"%>
 			</div>
 			<div class="form-group col-lg-6">
-				<%= f.input :billing_address %>
+				<%= f.input :billing_address,label:"地址" %>
 			</div>
 
 			<legend> 收货人</legend>
 			<div class="form-group col-lg-6">
-				<%= f.input :shipping_name %>
+				<%= f.input :shipping_name,label:"姓名" %>
 			</div>
 			<div class="form-group col-lg-6">
-				<%= f.input :shipping_address %>
+				<%= f.input :shipping_address,label:"地址" %>
 			</div>
 
 			<div class="checkout">
@@ -67,4 +68,5 @@
 
 		</div>
 	</div>
+</div>
 </div>
